[package]
name = "bgcat"
version = "0.1.0-b2"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
chrono = {version = "0.4.31", features = ["serde"]}
config = "0.13.3"
fern = {version = "0.6.2", features = ["colored"]}
image = "0.24.7"
lazy_static = "1.4.0"
log = "0.4.20"
mime = "0.3.17"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_urlencoded = "0.7.1"
slug = "0.1.4"
# https://github.com/surrealdb/surrealdb/issues/1850
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9+20230402" }
tera = { version = "1.19.1", default-features = false }
utoipa = { version = "3.5.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web","debug-embed"] }
webp = "0.2.6"