[package]
name = "bgcat"
version = "0.1.0-b3"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-web = "4.4.1"
actix-web-httpauth = "0.8.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
chrono = {version = "0.4.33", features = ["serde"]}
config = "0.13.4"
fern = {version = "0.6.2", features = ["colored"]}
image = "0.24.8"
lazy_static = "1.4.0"
log = "0.4.20"
mime = "0.3.17"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_urlencoded = "0.7.1"
slug = "0.1.5"
surrealdb = "1.1.1"
tera = { version = "1.19.1", default-features = false }
utoipa = { version = "4.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web","debug-embed"] }
webp = "0.2.6"