[package]
name = "bgcat"
version = "2.0.0"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-multipart = "0.7.0"
actix-web = "4.5.1"
actix-web-httpauth = "0.8.1"
actix-session = { version = "0.10.0", features = ["cookie-session"] }
chrono = {version = "0.4.38", features = ["serde"]}
config = "0.15.0"
fern = {version = "0.7.0", features = ["colored"]}
image = "0.25.1"
lazy_static = "1.4.0"
log = "0.4.21"
mime = "0.3.17"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_urlencoded = "0.7.1"
slug = "0.1.5"
surrealdb = { version = "2.2.2", features = ["kv-rocksdb"] }
tera = { version = "1.19.1", default-features = false }
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["actix-web","debug-embed"] }
webp = "0.3.0"
